--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,6 @@
 
 @layer components {
   .btn {
-    @apply border-2 border-primary px-4 py-2 rounded uppercase text-xl font-semibold cursor-pointer;
+    @apply border-2 border-primary px-4 py-2 rounded uppercase text-xl font-semibold cursor-pointer hover:bg-primary hover:text-white;
   }
 }
